# cse_491_fall_2023

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Group 1 - README.md  LICENSE.md  README.md  main.cpp  mkdocs.yml
.metals/: metals.lock.db  metals.mv.db
CSE491/: CMakeLists.txt
CSE491/source/Agents/: CMakeLists.txt
CSE491/source/Interfaces/: CMakeLists.txt  MainInterface.h  TrashInterface.hpp
CSE491/source/Worlds/: CMakeLists.txt  MazeWorld.hpp
CSE491/source/core/: CMakeLists.txt  CoreObject.hpp  Entity.hpp
assets/: input.json  second_floor_input.json  third_floor_input.json
blogposts/: README.md
docs/: DataCollection.md  Group 1 - README.md  (+9 more)
source/: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.doxy  Logging_main.cpp  Makefile  XML_main.cpp  example.cmake  gp_main.cpp  gp_selective_runner_main.cpp  gp_train_cgp_main.cpp  gp_train_lgp_main.cpp  gp_train_main.cmake  gp_train_main.cpp  group4_main.cpp  group_1_main.cpp  group_2_main.cpp  group_3_main.cmake  group_3_main.cpp  group_4_interface_main.cmake  group_4_interface_main.cpp  group_4_main.cmake  group_4_main.cpp  group_5_client_main.cmake  group_5_client_main.cpp  group_5_server_main.cmake  group_5_server_main.cpp  group_6_main.cmake  group_6_main.cpp  group_7_main.cpp  group_8_main.cpp  jsontest_main.cpp  lang_main.cpp  sample_main.cpp  second_floor_main.cpp  sfml_example_main.cpp  simple  simple_cgp_main.cpp  simple_gp_main.cpp  simple_main.cpp  (+1 more)
source/Agents/: AStarAgent.h  AStarAgent.hpp  AgentFactory.hpp  AgentLibary.h  AgentLibary.hpp  AgentMonika.hpp  FollowingAgent.hpp  PacingAgent.hpp  PathAgent.cpp  PathAgent.h  PathAgent.hpp  RandomAgent.hpp  TrackingAgent.hpp  matt_k_first_agent.cpp  matt_k_first_agent.h
source/Agents/AgentTests/: FollowingAgentTest.hpp
source/Agents/GP/: CGPAgent.hpp  CGPGenotype.hpp  GPAgent.hpp  GPAgentAnalyze.h  GPAgentBase.hpp  GPAgentSensors.hpp  GPAgentTest.hpp  GPAgent_.hpp  GPAgentsRegisters.hpp  GPTrainingLoop.hpp  Graph.hpp  GraphBuilder.hpp  GraphNode.hpp  Group7_GPA.md  LGPAgent.hpp
source/DataCollection/: AgentData.hpp  AgentInteractionCollector.hpp  AgentReciever.hpp  DamageCollector.hpp  DamageData.hpp  DamageReceiver.hpp  DataManager.hpp  DataReceiver.hpp  DataReceiverTest.hpp  DateReceiver.hpp  DoubleLinkedList.hpp  GameData.hpp  GameReceiver.hpp  GridPositionReceiver.hpp  ItemUseCollector.hpp  JsonBuilder.hpp  README  README.md
source/DataCollection/GRAPH/: ItemGraphPlotter.py  README.md  agentInteractions.json  gridPositions.json  itemDamage.json  itemUsage.json
source/DataCollection/matplot++/: CMakeLists.txt  main.cpp
source/DataCollection/matplot++/matplotpp/: CMakeLists.txt  MatPlotPlus.cpp  MatPlotPlus.h
source/Group7GP/: CGPAgent.hpp  GPAgent.hpp  GPGraph.cpp  GPGraph.hpp  Graph.hpp
source/Group7_GP_Agent/: CGPAgent.hpp  CGPGenotype.hpp  GPAgent.hpp  GPAgentSensors.hpp  GPAgentTest.hpp  GPAgent_.hpp  GPAgentsRegisters.hpp  GPTrainingLoop.hpp  Graph.hpp  GraphBuilder.hpp  GraphNode.hpp  Group7_GPA.md  LGPAgent.hpp  [Deprecated]GPAgent.hpp  agent.hpp
source/Interfaces/: Button.cpp  Button.h  Button.hpp  CMakeLists.txt  Component.cpp  Component.hpp  Container.cpp  Container.hpp  Group3_README.md  Inventory.cpp  Inventory.hpp  MainInterface.cpp  MainInterface.h  MainInterface.hpp  Menu.cpp  Menu.h  Menu.hpp  MessageBoard.cpp  MessageBoard.h  MessageBoard.hpp  TextBox.cpp  TextBox.h  TextBox.hpp  TextureHolder.cpp  TextureHolder.hpp  TrashInterface.hpp
source/Interfaces/NetWorth/: NetworkInterface.hpp  networkmain.cpp  testmain  testserver.cpp
source/Interfaces/NetWorth/client/: CMakeLists.txt  ClientInterface.hpp  ClientManager.hpp  ControlledAgent.hpp  clientmain  clientmain.cpp  networkingagent.hpp
source/Interfaces/NetWorth/server/: CMakeLists.txt  ServerInterface.hpp  ServerManager.hpp  ServerPlayerInterface.hpp  networkingworld.hpp  servermain  servermain.cpp  testserver.cpp
source/Test/: DataReceiverTest.cpp
source/Worlds/: BiomeGenerator.cpp  BiomeGenerator.h  BiomeGenerator.hpp  GenerativeWorld.hpp  Language.hpp  ManualWorld.hpp  MazeGeneration.cpp  MazeGeneration.h  MazeWorld.hpp  NewWorld.hpp  PerlinNoise.hpp  ProgramExecutor.hpp  SecondFloor.hpp  SecondWorld.hpp
source/core/: AgentBase.hpp  CoreObject.hpp  DEVELOPER_NOTES.md  Data.hpp  EasyLogging.hpp  Entity.cpp  Entity.hpp  GridPosition.hpp  InterfaceBase.hpp  Inventory.hpp  Item.hpp  ItemBase.hpp  Property.hpp  Serialize.hpp  WorldBase.hpp  WorldGrid.hpp
tests/: .gitignore  CMakeLists.txt  ctest.md  run_tests.sh
tests/assets/: input.json  second_floor_input.json
tests/assets/grids/: second_floor.grid
tests/unit/: CMakeLists.txt
tests/unit/Agents/: AStarAgent.cpp  AgentFactory.cmake  AgentFactory.cpp  CMakeLists.txt  FollowingAgent.cpp  PathAgent.cpp  RandomAgent.cpp  TestPathAgent.cpp  TrackingAgent.cpp  targets.txt
tests/unit/Agents/GP/: CGPAgent.cpp  CGPGenotype.cpp  CMakeLists.txt  Graph.cpp  GraphBuilder.cpp  GraphNode.cpp  LGPAgent.cpp  agent.cpp  registers.cpp  sensors.cpp
tests/unit/DataCollection/: AgentDataTest.cpp  AgentInteractionCollector.cpp  AgentReceiverTest.cpp  AgentRecieverTest.cpp  CMakeLists.txt  DamageCollector.cpp  DataReceiver.cpp  DataReceiverTest.cpp  DoubleLinkedList.cpp  GameDataTest.cpp  ItemUseCollector.cpp  targets.txt
tests/unit/DataCollectionTest/: DataReceiverTest.cpp
tests/unit/Interfaces/: CMakeLists.txt  Loopback.cpp
tests/unit/Worlds/: BiomeGenerator.cpp  CMakeLists.txt  GenerativeWorld.cmake  GenerativeWorld.cpp  Language.cpp  ManualWorld.cpp  SecondFloor.cpp  SecondWorld.cpp  targets.txt
tests/unit/XML_formater/: CMakeLists.txt  XML_format.cpp  XML_readfromfile.cmake  XML_readfromfile.cpp  XML_serialization.cpp  test.xml
tests/unit/core/: Agent.cpp  CMakeLists.txt  Data.cpp  Entity.cpp  GridPosition.cpp  Inventory.cpp  Item.cpp  Logger.cpp  Loopback.cmake  Loopback.cpp  Serialize.cpp  WorldGrid.cpp  targets.txt
tests/unit/gp_agents/: CGPAgent.cpp  CGPGenotype.cpp  CMakeLists.txt  GPGraph.cpp  Graph.cpp  GraphBuilder.cpp  GraphNode.cpp  agent.cpp  registers.cpp  sensors.cpp  targets.txt
(+238 files in other folders)
